# pricereader

./: .env.example  .gitignore  Dockerfile  README.md  README.zh-CN.md  config.example.yml  docker-compose.example.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/adapters/: douban_group.py  smzdm_feed.py
app/api/: __init__.py  dashboard_page.py  routes.py  settings_page.py
app/core/: __init__.py  settings.py
app/models/: __init__.py  config.py  controls.py  evaluation.py  runtime_config.py  source_items.py
app/notifiers/: __init__.py  wechat_gateway.py
app/pipelines/: __init__.py
app/services/: config_editor.py  config_loader.py  douban_enrichment.py  extractors.py  ingestion.py  notification_service.py  rule_engine.py  runtime_config.py  storage.py
app/static/: dashboard.css  dashboard.html  dashboard.js  settings.css  settings.html  settings.js
app/static/dashboard/: base.css  (+9 more)
app/tasks/: __init__.py  scheduler.py
docs/: AI_HANDOFF.md  AI_HANDOFF.zh-CN.md  DEPLOYMENT.md  DEPLOYMENT.zh-CN.md  ROADMAP.md  ROADMAP.zh-CN.md  SCREENSHOTS.md  SCREENSHOTS.zh-CN.md  USAGE_EXAMPLES.md  USAGE_EXAMPLES.zh-CN.md
scripts/: ci-test.sh
tests/: test_api.py  test_config_editor.py  test_config_loader.py  test_douban_adapter.py  test_extractors.py  test_health.py  test_ingestion.py  test_match_views.py  test_notification_service.py  test_post_deploy_check.py  test_rule_engine.py  test_runtime_config.py  test_runtime_controls.py  test_scheduler.py  test_smzdm_adapter.py  test_source_health.py  test_storage.py  test_wechat_gateway.py
(+1 files in other folders)
